--- a/univit/package.json
+++ b/univit/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://azeez1776.github.io/Universities-Management-System",
   "name": "univit",
   "version": "0.1.0",
   "private": true,
@@ -19,8 +20,9 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
-  
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
