--- a/UniversitiesAPI/package.json
+++ b/UniversitiesAPI/package.json
@@ -23,7 +23,7 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.7"
   },
   "nodemonConfig": {
     "restartable": "rs",
@@ -32,7 +32,8 @@
     ],
     "delay": "2500",
     "env": {
-      "NODE_ENV": "development"
+      "NODE_ENV": "development",
+      "PORT": 5000
     }
   }
 }
